@@ -5,6 +5,8 @@ http://www.springframework.org/osgi
 Changes in version 1.2.0 M2 (2008-xx-yy)
 ----------------------------------------
 
+Package org.springframework.osgi.io
+* improved existence check for bundle resources
 
 Changes in version 1.2.0 M1 (2008-09-05)
 ----------------------------------------
